[package]
name = "redis-kiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
async-std-runtime = [ "mobc/async-std", "mobc-redis/async-std-comp", "redis/async-std-comp" ]
tokio-runtime = [ "mobc/tokio", "mobc-redis/default", "redis/tokio-comp" ]
default = [ "async-std-runtime" ]

[dependencies]
# Serde
serde = { version = "1.0.115" }

# Serialisation
serde_json = "1.0.78"
rmp-serde = "1.0.0"
bincode = "1.3.3"

# Mobc + Redis
mobc = { version = "0.7.3", default-features = false }
redis = { version = "0.21.2", default-features = false, features = [ "aio" ] }
mobc-redis = { version = "0.7.0", default-features = false }

# Util
lazy_static = "1.4.0"

[dev-dependencies]
# Async
futures = "0.3.19"
async-std = { version = "1.10.0", features = [ "attributes" ] }
